<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="64dp"
            android:background="?attr/colorSurface"
            app:title="@string/app_name"
            app:titleTextAppearance="@style/TA.Heading.HeadlineSmall"
            app:titleTextColor="?attr/colorOnSurface" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            app:tabGravity="fill"
            app:tabIndicatorColor="?attr/colorPrimary"
            app:tabIndicatorFullWidth="false"
            app:tabMode="fixed"
            app:tabSelectedTextColor="?attr/colorOnSurface"
            app:tabTextAppearance="@style/TA.Heading.TitleSmall"
            app:tabTextColor="?attr/colorOnSurfaceVariant" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:contentDescription="@string/add_alarm"
        android:text="@string/add"
        app:icon="@drawable/ic_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
